# brybrydataguy-python

./: LICENSE  README.md  pyproject.toml
src/brybrydataguy/: __init__.py
src/brybrydataguy/meterstick_ect/: __init__.py  decomposition.py
tests/: test_meterstick_decomposition.py
